--- a/cafe/src/main/webapp/jsp/pages/header/fragment/admin_header.jspf
+++ b/cafe/src/main/webapp/jsp/pages/header/fragment/admin_header.jspf
@@ -1,10 +1,14 @@
  <li class="dropdown nav-item">
-     <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+     <a class="nav-link dropdown-toggle" href="${absolutePath}/controller?command=find_all_section" id="navbarDarkDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             ${menu}</a>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu"><fmt:message key="menu.all_menu"/> </a></li>
+            <c:forEach var="item" items="${sessionScope.section_list}">
+                <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu_by_section&id=${item.sectionId}">${item.sectionName}</a> </li>
+            </c:forEach>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="${absolutePath}/jsp/pages/admin/addproducts.jsp"><fmt:message key="menu.insert_menu"/> </a></li>
+            <li><a class="dropdown-item" href="${absolutePath}/jsp/pages/admin/section.jsp"><fmt:message key="section.title"/> </a></li>
         </ul>
     </li>
     <li class="nav-item">
@@ -17,7 +21,7 @@
     </li>
     <li class="nav-item">
         <a  class="nav-link"
-           href="#"><fmt:message key="header.registration"/> </a>
+           href="${absolutePath}/jsp/pages/registration.jsp"><fmt:message key="header.registration"/> </a>
     </li>
  <li class="nav-item dropdown">
      <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
