--- a/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
+++ b/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
@@ -1,8 +1,11 @@
 <li class="dropdown nav-item">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="${absolutePath}/controller?command=find_all_section" id="navbarDarkDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         ${menu}</a>
     <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu"><fmt:message key="menu.all_menu"/> </a></li>
+        <c:forEach var="item" items="${sessionScope.section_list}">
+            <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu_by_section&id=${item.sectionId}">${item.sectionName}</a> </li>
+        </c:forEach>
     </ul>
 </li>
 <li class="nav-item">
