--- a/cafe/src/main/webapp/jsp/pages/header/fragment/admin_header.jspf
+++ b/cafe/src/main/webapp/jsp/pages/header/fragment/admin_header.jspf
@@ -23,6 +23,14 @@
          <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_admins"><fmt:message key="user.list_admins"/> </a></li>
      </ul>
  </li>
+ <li class="dropdown nav-item">
+     <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+         <fmt:message key="restore.title"/></a>
+     <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_removing_products"><fmt:message key="menu.title"/> </a></li>
+         <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_removing_sections"><fmt:message key="section.title"/> </a></li>
+     </ul>
+ </li>
     <li class="nav-item">
         <a  class="nav-link"
            href="${absolutePath}/jsp/pages/registration.jsp"><fmt:message key="header.registration"/> </a>
