--- a/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
+++ b/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
@@ -4,7 +4,7 @@
     <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu"><fmt:message key="menu.all_menu"/> </a></li>
         <c:forEach var="item" items="${applicationScope.section_list}">
-            <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu_by_section&id=${item.sectionId}">${item.sectionName}</a> </li>
+            <li><a class="dropdown-item" href="${absolutePath}/controller?command=find_all_menu_by_section&section_id=${item.sectionId}">${item.sectionName}</a> </li>
         </c:forEach>
     </ul>
 </li>
