--- a/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
+++ b/cafe/src/main/webapp/jsp/pages/header/fragment/client_header.jspf
@@ -20,7 +20,7 @@
         <li><a class="dropdown-item" href="${absolutePath}/controller?command=calculate_user_discount"><fmt:message key="profile.discount"/> </a></li>
         <li><a class="dropdown-item" href="${absolutePath}/controller?command=go_to_orders_page"><fmt:message key="header.orders"/> </a> </li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="${absolutePath}/jsp/pages/common/settings.jsp"><fmt:message key="profile.settings"/> </a></li>
+        <li><a class="dropdown-item" href="${absolutePath}/controller?command=go_to_settings"><fmt:message key="profile.settings"/> </a></li>
     </ul>
 </li>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
